ErrorReporting Page changes

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     <svg class="fill-icon">
                       <use href="assets/svg/icon-sprite.svg#fill-board"></use>
                     </svg><span>Help Desk</span></a></li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav" href="">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav" href="ErrorReporting.html">
                     <svg class="stroke-icon">
                       <use href="assets/svg/icon-sprite.svg#stroke-ecommerce"></use>
                     </svg>
