--- a/Domain.html
+++ b/Domain.html
@@ -153,7 +153,7 @@
                 </li>
               
                
-                <li class="sidebar-list pt-5"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav" href="">
+                <li class="sidebar-list pt-5"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav" href="Dashboard.html">
                     <svg class="stroke-icon">
                       <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
                     </svg>
