--- a/User.html
+++ b/User.html
@@ -9,7 +9,7 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" href="../assets/images/Png_KloudDial.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../assets/images/Png_KloudDial.ico" type="image/x-icon">
-    <title>Domain List</title>
+    <title>User List</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -153,7 +153,7 @@
                 </li>
               
                
-                <li class="sidebar-list pt-5"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav" href="">
+                <li class="sidebar-list pt-5"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav" href="Dashboard.html">
                     <svg class="stroke-icon">
                       <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
                     </svg>
