--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <span class="lan-3">Dashboard</span></a>
                   
                   </li>
-                  <li class="sidebar-list"><i class="fa fa-thumb-tack">    </i><a class="sidebar-link sidebar-title link-nav" href="">
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack">    </i><a class="sidebar-link sidebar-title link-nav" href="User.html">
                     <svg class="stroke-icon">
                       <use href="assets/svg/icon-sprite.svg#stroke-project"></use>
                     </svg>
