Complate All Module

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -12,52 +12,39 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" href="../assets/images/Png_KloudDial.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../assets/images/Png_KloudDial.ico" type="image/x-icon">
-    <title>Dashboard</title>
+    <title>Domain List</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-    <!-- <link href="../../css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet"> -->
+    <link href="../../css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.css">
-
+  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- ico-font-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/icofont.css">
-    <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
-    <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/flag-icon.css">
-    <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/feather-icon.css">
-    <!-- Plugins css start-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/slick.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/dev-style.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/slick-theme.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/animate.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/owlcarousel.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/rating.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/js-datatables/style.css">
-    <!-- Plugins css Ends-->
-    <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
-    <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
-    <style>
-        .page-wrapper.compact-wrapper .page-header {
-            margin-left: 30px;
-            width: 96%;
-        }
-
-        #domain {
-            width: 55%;
-            height: 160px;
-            border-radius: 20px;
-        }
-    </style>
+     <!-- ico-font-->
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/icofont.css">
+     <!-- Themify icon-->
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
+     <!-- Flag icon-->
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/flag-icon.css">
+     <!-- Feather icon-->
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/feather-icon.css">
+     <!-- Plugins css start-->
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/slick.css">
+     <link rel="stylesheet" type="text/css" href="assets/css/dev-style.css">
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/slick-theme.css">
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/scrollbar.css">
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/animate.css">
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/owlcarousel.css">
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/rating.css">
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/js-datatables/style.css">
+     <!-- Plugins css Ends-->
+     <!-- Bootstrap css-->
+     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+     <!-- App css-->
+     <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
+     <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
+     <!-- Responsive css-->
+     <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">  
 </head>
 
 <body>
@@ -74,11 +61,11 @@
     <!-- tap on tap ends-->
     <!-- page-wrapper Start-->
     <div class="page-wrapper compact-wrapper" id="pageWrapper">
-        <div class="page-header row">
+        <div class="page-header row headerpage">
             <div class="col-4 col-xl-4 page-title">
                 <h4 class="f-w-700">Dashboard</h4>
                 <nav>
-                    <ol class="breadcrumb justify-content-sm-start align-items-center mb-0">
+                    <ol class="breadcrumb justify-content-sm-start align-items-center mb-0 bg-white">
                         <li class="breadcrumb-item"><a href="index.html"> <i data-feather="home"> </i></a></li>
                         <li class="breadcrumb-item f-w-400">Dashboard</li>
                         <li class="breadcrumb-item f-w-400 active">Default</li>
@@ -113,18 +100,7 @@
                     </div>
                     <div class="nav-right col-xxl-8 col-xl-6 col-md-7 col-8 pull-right right-header p-0 ms-auto">
                         <ul class="nav-menus">
-
-
-
-
-                            <li class="onhover-dropdown">
-
-
-                            </li>
-
-
-
-
+                            <li class="onhover-dropdown"> </li>
                             <li class="profile-nav onhover-dropdown px-0 py-0">
                                 <div class="d-flex profile-media align-items-center"><img class="img-30"
                                         src="assets/images/dashboard/profile.png" alt="">
@@ -160,40 +136,45 @@
                     <div class="col-md-9">
                         <div class="row">
                             <div class="col justify-content-center align-items-center d-flex">
-                                <div class="btn border border-2 bg-white shadow w-100 " id="domain">
+                                <div class="btn border border-2 bg-white shadow w-100 " id="card">
+                                    <a href="User.html"
+                                        class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">User</a>
+                                </div>
+                                <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
+                            </div>
+                            <div class="col justify-content-center align-items-center d-flex">
+                                <div class="btn border border-2 bg-white shadow w-100 " id="card">
                                     <a href="Domain.html"
                                         class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">Domain</a>
                                 </div>
                                 <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
-                            </div><div class="col justify-content-center align-items-center d-flex">
-                                <div class="btn border border-2 bg-white shadow w-100 " id="domain">
-                                    <a href="HelpDeskList.html"
-                                        class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">HelpDesk</a>
-                                </div>
-                                <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
-                            </div><div class="col justify-content-center align-items-center d-flex">
-                                <div class="btn border border-2 bg-white shadow w-100  " id="domain">
-                                    <a href="User.html"
-                                        class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">UserModule</a>
+                            </div>
+                            <div class="col justify-content-center align-items-center d-flex">
+                                <div class="btn border border-2 bg-white shadow w-100  " id="card">
+                                    <a href=""
+                                        class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">HelpDeskList</a>
                                 </div>
                                 <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
                             </div>
                         </div>
                         <div class="row mt-4">
                             <div class="col justify-content-center align-items-center d-flex">
-                                <div class="btn border border-2 bg-white shadow w-100 " id="domain">
-                                    <a href="link"
-                                        class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">KloudDial <br> WebPortal</a>
+                                <div class="btn border border-2 bg-white shadow w-100 " id="card">
+                                    <a href="ErrorReporting.html"
+                                        class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">Error Reports
+                                       </a>
                                 </div>
                                 <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
-                            </div><div class="col justify-content-center align-items-center d-flex">
-                                <div class="btn border border-2 bg-white shadow w-100 " id="domain">
-                                    <a href="link"
-                                        class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">Dummy</a>
+                            </div>
+                            <div class="col justify-content-center align-items-center d-flex">
+                                <div class="btn border border-2 bg-white shadow w-100 " id="card">
+                                    <a href=""
+                                        class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">Create Tickets</a>
                                 </div>
                                 <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
-                            </div><div class="col justify-content-center align-items-center d-flex">
-                                <div class="btn border border-2 bg-white shadow w-100  " id="domain">
+                            </div>
+                            <div class="col justify-content-center align-items-center d-flex">
+                                <div class="btn border border-2 bg-white shadow w-100  " id="card">
                                     <a href="link"
                                         class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">Dummy</a>
                                 </div>
@@ -202,7 +183,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
 
