--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
                       <input id="checkbox1" type="checkbox">
                     </div><a class="link" href="forget-password.html">Forgot password?</a>
                     <div class="text-end mt-4 mb-4">
-                      <button class="btn btn-primary btn-block w-100" type="submit">Login in</button>
+                      <button class="btn btn-primary btn-block w-100" type="submit">Login</button>
                     </div>
                   </div>               
                  
