--- a/reset-password.html
+++ b/reset-password.html
@@ -78,7 +78,7 @@
                         </div>
                       </div>
                     <div class="form-group mb-0 mt-4">                     
-                      <button class="btn btn-primary btn-block w-100" type="submit">Save</button>
+                      <button class="btn btn-primary btn-block w-100" type="submit">Change</button>
                     </div>
                   </form>
                 </div>
