--- a/change-password.html
+++ b/change-password.html
@@ -9,7 +9,7 @@
     <meta name="author" content="pixelstrap">
     <link rel="icon" href="assets/images/Png_KloudDial.ico" type="image/x-icon">
     <link rel="shortcut icon" href="assets/images/Png_KloudDial.ico" type="image/x-icon">
-    <title>Reset Password</title>
+    <title>Change Password</title>
     <!-- Google font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
@@ -55,8 +55,14 @@
                 <div><a class="logo" href="index.html"><img class="for-light" height="100px" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"><img class="img-fluid for-dark" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"></a></div>
                 <div class="login-main pt-5 mb-4"> 
                   <form class="theme-form">
-                    <h2 class="text-center"><b>Reset Your Password</b></h2>
-                    
+                    <h2 class="text-center"><b>Change Your Password</b></h2>
+                    <div class="form-group pt-2">
+                      <label class="col-form-label">Current Password</label>
+                      <div class="form-input position-relative">
+                        <input class="form-control" type="password" name="login[password]" required="" placeholder="*********">
+                        <div class="show-hide"><span class="show"></span></div>
+                      </div>
+                    </div>
                     <div class="form-group">
                         <label class="col-form-label">New Password</label>
                         <div class="form-input position-relative">
