--- a/Dashboard.html
+++ b/Dashboard.html
@@ -110,7 +110,7 @@
                                 </div>
                                 <ul class="profile-dropdown onhover-show-div">
 
-                                    <li><a href="login.html"><i data-feather="log-in"> </i><span>Log out</span></a></li>
+                                    <li><a href="login.html"><i data-feather="log-in"> </i><span>Change Password</span></a></li><li><a href="login.html"><i data-feather="log-in"> </i><span>Log out</span></a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -128,7 +128,7 @@
                     </script>
                 </div>
             </div>
-            <!-- Page Header Ends                              -->
+            <!-- Page Header Ends -->
         </div>
         <div class="" style="margin-top: 150px;">
             <div class="container-fluid">
@@ -157,30 +157,27 @@
                                 <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
                             </div>
                         </div>
-                        <div class="row mt-4">
+                        <!-- <div class="row mt-4">
                             <div class="col justify-content-center align-items-center d-flex">
                                 <div class="btn border border-2 bg-white shadow w-100 " id="card">
                                     <a href="ErrorReporting.html"
                                         class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">Error Reports
                                        </a>
                                 </div>
-                                <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
                             </div>
                             <div class="col justify-content-center align-items-center d-flex">
                                 <div class="btn border border-2 bg-white shadow w-100 " id="card">
                                     <a href=""
                                         class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">Create Tickets</a>
                                 </div>
-                                <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
                             </div>
                             <div class="col justify-content-center align-items-center d-flex">
                                 <div class="btn border border-2 bg-white shadow w-100  " id="card">
                                     <a href="link"
                                         class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">Dummy</a>
                                 </div>
-                                <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -222,7 +219,7 @@
         <!-- Theme js-->
         <script src="../assets/js/script.js"></script>
         <script src="../assets/js/script1.js"></script>
-        <script src="../assets/js/theme-customizer/customizer.js"></script>
+        
         <!-- Plugin used-->
 
 </body>
