--- a/Domain.html
+++ b/Domain.html
@@ -104,28 +104,16 @@
           </div>
           <div class="nav-right col-xxl-8 col-xl-6 col-md-7 col-8 pull-right right-header p-0 ms-auto">
             <ul class="nav-menus">
-
-
-
-
               <li class="onhover-dropdown">
-
-
               </li>
-
-
-
-
               <li class="profile-nav onhover-dropdown px-0 py-0">
                 <div class="d-flex profile-media align-items-center"><img class="img-30"
                     src="assets/images/dashboard/profile.png" alt="">
-                  <div class="flex-grow-1"><span>Alen Miller</span>
-                    <p class="mb-0 font-outfit">UI Designer<i class="fa fa-angle-down"></i></p>
+                  <div class="flex-grow-1"><span>Maitri Bhimani</span>
                   </div>
                 </div>
                 <ul class="profile-dropdown onhover-show-div">
-
-                  <li><a href="login.html"><i data-feather="log-in"> </i><span>Log out</span></a></li>
+                  <li><a href="login.html"><i data-feather="log-in"> </i><span>Change Password</span></a></li><li><a href="login.html"><i data-feather="log-in"> </i><span></span>Log out</span></a></li>
                 </ul>
               </li>
             </ul>
@@ -287,8 +275,8 @@
                   <div class="modal-body">
                     <div class="row">
                       <div class="form-floating">
-                        <input class="form-control" id="floatingPassword" type="text" placeholder="Username">
-                        <label for="floatingPassword" class="ms-2">Username</label>
+                        <input class="form-control" id="floatingPassword" type="text" placeholder="Domain Name">
+                        <label for="floatingPassword" class="ms-2">Domain Name</label>
                       </div>
                     </div>
                     <div class="row mt-4">
@@ -453,7 +441,7 @@
       <!-- Theme js-->
       <script src="../assets/js/script.js"></script>
       <script src="../assets/js/script1.js"></script>
-      <script src="../assets/js/theme-customizer/customizer.js"></script>
+      
       <!-- Plugin used-->
 
       <script>
