Some Changes Complated

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -66,7 +66,7 @@
                 <h4 class="f-w-700">Dashboard</h4>
                 <nav>
                     <ol class="breadcrumb justify-content-sm-start align-items-center mb-0 bg-white">
-                        <li class="breadcrumb-item"><a href="index.html"> <i data-feather="home"> </i></a></li>
+                        <li class="breadcrumb-item"><a href="Dashboard.html"> <i data-feather="home"> </i></a></li>
                         <li class="breadcrumb-item f-w-400">Dashboard</li>
                         <li class="breadcrumb-item f-w-400 active">Default</li>
                     </ol>
@@ -90,7 +90,7 @@
                         </div>
                     </form>
                     <div class="header-logo-wrapper col-auto p-0">
-                        <div class="logo-wrapper"><a href="index.html"><img class="img-fluid"
+                        <div class="logo-wrapper"><a href="Dashboard.html"><img class="img-fluid"
                                     src="assets/images/logo/Png_KloudDial.png" alt=""></a></div>
                         <div class="toggle-sidebar">
                             <svg class="stroke-icon sidebar-toggle status_toggle middle">
