--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
         <div class="col-12 p-0">    
           <div class="login-card login-dark">
             <div>
-              <div><a class="logo" href="index.html"><img class="for-light" height="100px" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"><img class="img-fluid for-dark" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"></a></div>
+              <div><a class="logo" href="Dashboard.html"><img class="for-light" height="100px" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"><img class="img-fluid for-dark" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"></a></div>
               <div class="login-main pt-5"> 
                 <form class="theme-form">
                   <h2 class="text-center"><b>Login</b></h2>
