--- a/reset-password.html
+++ b/reset-password.html
@@ -52,7 +52,7 @@
           <div class="col-12">     
             <div class="login-card login-dark">
               <div>
-                <div><a class="logo" href="index.html"><img class="for-light" height="100px" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"><img class="img-fluid for-dark" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"></a></div>
+                <div><a class="logo" href="Dashboard.html"><img class="for-light" height="100px" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"><img class="img-fluid for-dark" src="assets/images/logo/Png_KloudDial.png" alt="looginpage"></a></div>
                 <div class="login-main pt-5 mb-4"> 
                   <form class="theme-form">
                     <h2 class="text-center"><b>Reset Your Password</b></h2>
