--- a/ErrorReports.html
+++ b/ErrorReports.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="assets/images/Png_KloudDial.ico" type="image/x-icon">
   <link rel="shortcut icon" href="assets/images/Png_KloudDial.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title> ErrorReporting </title>
+  <title> ErrorReportingtghtryh </title>
   <!-- Google font-->
   <link rel="stylesheet" type="text/css" href="assets/css/dev-style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
