--- a/ErrorReporting.html
+++ b/ErrorReporting.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="assets/images/Png_KloudDial.ico" type="image/x-icon">
   <link rel="shortcut icon" href="assets/images/Png_KloudDial.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title> ErrorReportingtghtryh </title>
+  <title> ErrorReporting </title>r5tuy568iu69i87oi8o9
   <!-- Google font-->
   <link rel="stylesheet" type="text/css" href="assets/css/dev-style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -140,7 +140,6 @@
           <div class="logo-wrapper"><a href="Dashboard.html"><img class="img-fluid"
                 src="assets/images/logo/Png_KloudDial.png" alt=""></a>
             <div class="back-btn"><i class="fa fa-angle-left"></i></div>
-
           </div>
           <div class="logo-icon-wrapper"><a href="Dashboard.html"><img class="img-fluid"
                 src="assets/images/logo/logo-icon.png" alt=""></a></div>
@@ -150,45 +149,23 @@
               <ul class="sidebar-links pt-5" id="simple-bar">
                 <li class="back-btn"><a href="Dashboard.html"><img class="img-fluid"
                       src="assets/images/logo/logo-icon.png" alt=""></a>
-
                 </li>
-
-
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav"
                     href="Dashboard.html">
                     <svg class="stroke-icon">
                       <use href="assets/svg/icon-sprite.svg#stroke-home"></use>
                     </svg>
                     <span class="lan-3">Dashboard</span></a>
-
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i><a class="sidebar-link sidebar-title link-nav"
-                    href="User.html">
-                    <svg class="stroke-icon">
-                      <use href="assets/svg/icon-sprite.svg#stroke-project"></use>
-                    </svg>
-                    <svg class="fill-icon">
-                      <use href="assets/svg/icon-sprite.svg#fill-project"></use>
-                    </svg><span>User</span></a>
-
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav"
-                    href="Domain.html">
-                    <svg class="stroke-icon">
-                      <use href="assets/svg/icon-sprite.svg#stroke-file"></use>
-                    </svg>
-                    <svg class="fill-icon">
-                      <use href="assets/svg/icon-sprite.svg#fill-file"></use>
-                    </svg><span>Domain</span></a></li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i><a class="sidebar-link sidebar-title link-nav"
-                    href="HelpDeskList.html">
-                    <svg class="stroke-icon">
-                      <use href="assets/svg/icon-sprite.svg#stroke-board"></use>
-                    </svg>
-                    <svg class="fill-icon">
-                      <use href="assets/svg/icon-sprite.svg#fill-board"></use>
-                    </svg><span>Help Desk</span></a></li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav"
+                  href="Domain.html">
+                  <svg class="stroke-icon">
+                    <use href="assets/svg/icon-sprite.svg#stroke-file"></use>
+                  </svg>
+                  <svg class="fill-icon">
+                    <use href="assets/svg/icon-sprite.svg#fill-file"></use>
+                  </svg><span>Domain</span></a></li>
+                  <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav"
                     href="ErrorReporting.html">
                     <svg class="stroke-icon">
                       <use href="assets/svg/icon-sprite.svg#stroke-ecommerce"></use>
@@ -196,23 +173,34 @@
                     <svg class="fill-icon">
                       <use href="assets/svg/icon-sprite.svg#fill-ecommerce"></use>
                     </svg><span>Error Reports</span></a>
-
                 </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title link-nav"
-                    href="CreateTicket.html">
+             
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i><a class="sidebar-link sidebar-title"
+                    href="HelpDeskList.html">
                     <svg class="stroke-icon">
-                      <use href="assets/svg/icon-sprite.svg#stroke-ecommerce"></use>
+                      <use href="../assets/svg/icon-sprite.svg#stroke-project"></use>
                     </svg>
                     <svg class="fill-icon">
-                      <use href="assets/svg/icon-sprite.svg#fill-ecommerce"></use>
-                    </svg><span>Create Ticket</span></a>
-
+                      <use href="../assets/svg/icon-sprite.svg#fill-project"></use>
+                    </svg><span>Help Desk </span></a>
+                  <ul class="sidebar-submenu">
+                    <li><a href="HelpDeskList.html">Ticket Traking</a></li>
+                    <li><a href="CreateTicket.html">CreateTicket</a></li>
+                    <li><a href="Reject.html">Rejected Ticket</a></li>
+                  </ul>
                 </li>
-
-
+             
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i><a class="sidebar-link sidebar-title link-nav"
+                  href="User.html">
+                  <svg class="stroke-icon">
+                    <use href="assets/svg/icon-sprite.svg#stroke-project"></use>
+                  </svg>
+                  <svg class="fill-icon">
+                    <use href="assets/svg/icon-sprite.svg#fill-project"></use>
+                  </svg><span>User</span></a>
+              </li>
               </ul>
             </div>
-
           </nav>
         </div>
       </div>
