--- a/Dashboard.html
+++ b/Dashboard.html
@@ -151,7 +151,7 @@
                             </div>
                             <div class="col justify-content-center align-items-center d-flex">
                                 <div class="btn border border-2 bg-white shadow w-100  " id="card">
-                                    <a href=""
+                                    <a href="HelpDeskList.html"
                                         class="h-100 fs-5 w-100 justify-content-center align-items-center d-flex text-decoration-none fw-bold">HelpDeskList</a>
                                 </div>
                                 <!-- <a href="" class="btn b-ln-height button-light-primary" id="domain"><div class="fs-4 justify-content-center align-items-center">Domain</div></a> -->
